# osa_airp1_sea_arm_robot

airp1_sea_arm_apps/: CMakeLists.txt  package.xml
airp1_sea_arm_apps/include/airp1_sea_arm_apps/: robotDefines.h
airp1_sea_arm_apps/launch/: airp1_sea_arm_arcade_switch_demo.launch  airp1_sea_arm_joy_demo.launch  airp1_sea_arm_table_demo.launch  airp1_sea_arm_two_joy_demo.launch  airp1_sea_arm_waldo_demo.launch
airp1_sea_arm_apps/src/: arcade_sequence.cpp  arcade_switch_xbox_joy.cpp  sea_arm_table_xbox_joy.cpp  sea_arm_two_xbox_joy.cpp  sea_arm_waldo_joy.cpp  sea_arm_xbox_joy.cpp  two_xbox_joy_conductor.cpp  waldo_joy_conductor.cpp  xbox_joy_conductor.cpp
airp1_sea_arm_apps/srv/: getHeadPositionCmd.srv  getSlaveCmdArray.srv
airp1_sea_arm_bringup/: CMakeLists.txt  package.xml
airp1_sea_arm_bringup/launch/: airp1_sea_arm_bringup.launch  airp1_sea_arm_two_bringup.launch
airp1_sea_arm_bringup/script/: launch_airp1_sea_arm.sh
airp1_sea_arm_description/: CMakeLists.txt  package.xml
airp1_sea_arm_description/config/: airp1_sea_arm_left_control.yaml  airp1_sea_arm_proto1.yaml  airp1_sea_arm_proto1_and_2.yaml  airp1_sea_arm_proto2.yaml  airp1_sea_arm_right_control.yaml
airp1_sea_arm_description/launch/: airp1_sea_arm_control.launch  airp1_sea_arm_gazebo.launch  airp1_sea_arm_rviz.launch
airp1_sea_arm_description/meshes/collision/: sea_arm_01_assem_01_arm_link_left_collision.stl  sea_arm_01_assem_01_arm_link_right_collision.stl  sea_arm_01_assem_02_shoulder_pitch_link_left_collision.stl  sea_arm_01_assem_02_shoulder_pitch_link_right_collision.stl  sea_arm_01_assem_04_upper_arm_link_right_collision.stl  sea_arm_01_assem_05_elbow_link_right_collision.stl
airp1_sea_arm_description/meshes/visual/: sea_arm_01_assem_01_arm_link_left.dae  sea_arm_01_assem_01_arm_link_right.dae  sea_arm_01_assem_02_shoulder_pitch_link_left.dae  sea_arm_01_assem_02_shoulder_pitch_link_right.dae  sea_arm_01_assem_03_shoulder_yaw_link.dae  sea_arm_01_assem_04_upper_arm_link_left.dae  sea_arm_01_assem_04_upper_arm_link_right.dae  sea_arm_01_assem_05_elbow_link_left.dae
airp1_sea_arm_description/urdf/: airp1_sea_arm_left.gazebo  airp1_sea_arm_left.xacro  airp1_sea_arm_left_gazebo.xacro  airp1_sea_arm_right.xacro  airp1_sea_arm_right_gazebo.xacro
airp1_sea_arm_description/worlds/: airp1_sea_arm.world
osa_airp1_sea_arm_robot/: CMakeLists.txt  package.xml
osa_r2p_sea_arm_robot/: CMakeLists.txt  package.xml
r2p_sea_arm_apps/: CMakeLists.txt  package.xml
r2p_sea_arm_apps/config/: custom_rosconsole.conf
r2p_sea_arm_apps/include/r2p_foldy_base_apps/: robotDefines.h
r2p_sea_arm_apps/launch/: r2p_sea_arm_arcade_switch_demo.launch  r2p_sea_arm_demo.launch  r2p_sea_arm_joy_demo.launch  r2p_sea_arm_table_demo.launch  r2p_sea_arm_two_joy_demo.launch  r2p_sea_arm_waldo_demo.launch
r2p_sea_arm_apps/src/: arcade_sequence.cpp  arcade_switch_xbox_joy.cpp  sea_arm_manual.cpp  sea_arm_table_xbox_joy.cpp  sea_arm_two_xbox_joy.cpp  sea_arm_waldo_joy.cpp  sea_arm_xbox_joy.cpp  two_xbox_joy_conductor.cpp  waldo_joy_conductor.cpp  xbox_joy_conductor.cpp
r2p_sea_arm_apps/srv/: getAllCurrentCmd.srv  getSlaveCurrentCmd.srv  getSlaveLockCmd.srv  switchNode.srv
r2p_sea_arm_bringup/: CMakeLists.txt  package.xml
r2p_sea_arm_bringup/launch/: r2p_sea_arm_bringup.launch  r2p_sea_arm_two_bringup.launch
r2p_sea_arm_bringup/script/: launch_r2p_sea_arm.sh
r2p_sea_arm_controller_configuration/: CMakeLists.txt  package.xml
r2p_sea_arm_controller_configuration/launch/: default_controllers.launch
r2p_sea_arm_controller_configuration_gazebo/: CMakeLists.txt  package.xml
r2p_sea_arm_description/: CMakeLists.txt  package.xml
r2p_sea_arm_description/config/: r2p2_sea_arm_left_control.yaml  r2p2_sea_arm_right_control.yaml  r2p_sea_arm.yaml  r2p_sea_arm_control.yaml  r2p_sea_arm_proto1.yaml  r2p_sea_arm_proto1_and_2.yaml  r2p_sea_arm_proto2.yaml  urdf.rviz
r2p_sea_arm_description/launch/: r2p_sea_arm_control.launch  r2p_sea_arm_gazebo.launch  r2p_sea_arm_rviz.launch
r2p_sea_arm_description/meshes/: r2p_sea_arm_base.dae  r2p_sea_arm_base_collision.dae  r2p_sea_forearm.dae  r2p_sea_forearm_collision.dae  r2p_sea_shoulder_pitch.dae  r2p_sea_shoulder_pitch_collision.dae  r2p_sea_shoulder_yaw.dae  r2p_sea_shoulder_yaw_collision.dae  r2p_sea_upper_arm.dae  r2p_sea_upper_arm_collision.dae  r2p_tripod_v1.dae  r2p_tripod_v2.dae
r2p_sea_arm_description/meshes/collision/: sea_arm_01_assem_03_shoulder_yaw_link_collision.stl  sea_arm_01_assem_04_upper_arm_link_left_collision.stl  sea_arm_01_assem_05_elbow_link_left_collision.stl
r2p_sea_arm_description/meshes/visual/: sea_arm_01_assem_05_elbow_link_right.dae
r2p_sea_arm_description/urdf/: r2p_sea_arm.gazebo  r2p_sea_arm.xacro  r2p_sea_arm_gazebo.xacro  r2p_sea_arm_left.gazebo  r2p_sea_arm_left.xacro  r2p_sea_arm_left_gazebo.xacro  r2p_sea_arm_right.gazebo  r2p_sea_arm_right.xacro  r2p_sea_arm_right_gazebo.xacro
r2p_sea_arm_description/worlds/: r2p2_sea_arm.world  r2p_sea_arm.world
r2p_sea_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r2p_sea_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  r2p_sea_arm.srdf
r2p_sea_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
