<package>
  <name>r2p_sea_arm_description</name>
  <version>0.1.1</version>
  <description>Config files that describe the R2P SEA Arm.</description>
  <maintainer email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</maintainer>

  <license>Simplified BSD</license>

  <author>Cyril Jourdan</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
